- [#3778] Add some hooks for the registration and unregistration process
- [#3780] Add a relation event->registrations
- [#3777] Add Model_Event::getAvailablePrices

Localization:
- [#3853] Replace "Seminar-Manager" with "Seminarmanager" in the German localizations
- [#3852] Update the French localization, thanks to Martin Rebetez

Bug fixes:
- [#5374] Test failure in tx_seminars_Service_EMailSalutationTest on 6.2
- [#5373] Test errors in tx_seminars_OldModel_EventTest on 6.2
- [#5291] Full-text search finds nothing on some installations
- [#5372] Test failures in tx_seminars_OldModel_EventTest
- [#4746] Salutation in the thank-you e-mail is mixed up
- [#4235] RegistrationManager::setEMailIntroduction might build a nonsense introduction
- [#5277] Test failure in Tx_seminars_Service_RegistrationManagerTest
- [#5357] Test failure in tx_seminars_OldModel_EventTest
- [#5364] Search by start date ignores then-running events
- [#5359] Action links don't trigger actions in Firefox
- [#5356] Test failure in Tx_Seminars_FrontEnd_EventEditorTest
- [#5355] Test failure in tx_seminars_FrontEnd_CountdownTest
- [#5350] Up the allows static_info_tables version to 6.2.99
- [#5340] Category selector is not cleared with the clear button
- [#5333] Update the FORMidable download link
- [#5332] EventBagBuilder needs more parentheses
- [#5282] Download link to FORMidable is split across several lines
- [#5290] Force the SQL tables with full-text indices to use the MyISAM engine
- [#5285] Warning about wrong type for number_format
- [#5276] Event headline configuration check looks in the wrong namespace
- [#5275] Test failure in BagBuilder_EventTest
- [#5264] Crash in the configcheck unit tests with the latest oelib
- [#5151] PHP Fatal error: Call to a member function sql_free_result() if using full-text search
- [#5215] Sending emails from backend not possible
- [#5214] Crash in BE events list in PHP 5.4
- [#4343] Some unit tests read the real TS setup
- [#4319} Change != to <> in SQL